fixed white space in titles

--- a/cycleatlanta.org/rides/css/main.css
+++ b/cycleatlanta.org/rides/css/main.css
@@ -102,7 +102,7 @@ height:100%;
 }
 
 .cyclePHL_title {
-	
+	width: 100%;
 	z-index: 10;
 background-color: rgba(169,9,1,0.8); /* red */
 
@@ -122,6 +122,7 @@ padding: 5px;
 
 z-index: 25;
 background-color: rgb(0,0,0);
+width: 100%;
 
 
 padding: 3px;
